fixed z-index error

--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,5 @@
 
 body {
     font-family: "Gantari", sans-serif;
+    background-color: #AFE6FF;
 }
